--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -80,12 +80,14 @@ body{
 
         .content-loader{
             background: violet;
-            width: 100%;
+            // width: 100%;
             min-height: 75vh;
+            flex-grow: 2;
         }
 
         aside{
-            width: 100%;
+            flex-grow: 1;
+            // width: 100%;
             background: indigo;
 
             h2{
@@ -104,7 +106,7 @@ body{
         .footer-contents{
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
 
             .sides{
                 display: flex;
