--- a/public/css/default/home.scss
+++ b/public/css/default/home.scss
@@ -1,1 +1,62 @@
+.home{
+    .top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
 
+        .form-group{
+            flex-grow: 1;
+        }
+    }
+    .table-container{
+        .table-details{
+            // width: 100%;
+
+            table{
+                // width: 100%;
+
+                thead{
+                    th{
+                        vertical-align: middle;
+                        text-align: center;
+                    }
+                }
+
+                tbody{
+                    td{
+                        vertical-align: middle;
+                        text-align: center;
+                    }
+
+                    .td-flex{
+                        .td-span-parent{
+                            display: flex;
+                            justify-content: space-evenly;
+                            align-items: center;
+                        }
+                    }
+
+                    .left{
+                        text-align: left;
+                    }
+
+                    .right{
+                        text-align: right;
+                    }
+                }
+
+                tfoot{
+                    th{
+                        vertical-align: middle;
+                        text-align: right;
+                    }
+                }
+            }
+        }
+
+        .hide{
+            display: none;
+        }
+    }
+}
