--- a/public/css/month/create.css
+++ b/public/css/month/create.css
@@ -1,1 +1,29 @@
-/*# sourceMappingURL=create.css.map */
+.month-create {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.month-create h2 {
+  text-align: center;
+}
+.month-create form {
+  max-width: 95%;
+  min-width: 500px;
+  background: black;
+  color: white;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem gray;
+}
+.month-create form .month-create-error {
+  color: red;
+  display: block;
+}
+.month-create form .btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}/*# sourceMappingURL=create.css.map */
