--- a/public/css/month/index.scss
+++ b/public/css/month/index.scss
@@ -1,1 +1,36 @@
+.month-index{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 
+    h2{
+        text-align: center;
+        margin-bottom: 0rem;
+        padding-bottom: 0rem;
+    }
+
+    .top{
+        width: 100%;
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        gap: 1rem;
+
+        .form-group{
+            width: 100%;
+        }
+    }
+
+    .table-container{
+        width: 100%;
+
+        table{
+            .clickable{
+                cursor: pointer;
+            }
+        }
+    }
+}
