--- a/public/css/month/edit.scss
+++ b/public/css/month/edit.scss
@@ -1,1 +1,33 @@
+.month-edit{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 
+    h2{
+        text-align: center;
+    }
+
+    form{
+        max-width: 95%;
+        min-width: 500px;
+        background: black;
+        color: white;
+        padding: 1rem;
+        border-radius: .25rem;
+        box-shadow: 0rem 0rem .5rem gray;
+
+        .month-edit-error{
+            color: red;
+            display: block;
+        }
+
+        .btn-container{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+}
