--- a/public/css/month/show.css
+++ b/public/css/month/show.css
@@ -1,1 +1,104 @@
-/*# sourceMappingURL=show.css.map */
+.month-show h2, .month-show h3 {
+  margin: 0rem;
+  padding: 0rem;
+  text-align: center;
+}
+.month-show .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.month-show .top h2 {
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+.month-show .info-container {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 0.5rem;
+}
+.month-show .info-container label {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 500px;
+  max-width: 100%;
+  font-weight: bold;
+  border-bottom: 0.1rem dashed gray;
+}
+.month-show .info-container label span {
+  font-weight: normal;
+  font-style: italic;
+}
+.month-show .detail-container .table-details table thead th {
+  vertical-align: middle;
+  text-align: center;
+}
+.month-show .detail-container .table-details table tbody td {
+  vertical-align: middle;
+  text-align: center;
+}
+.month-show .detail-container .table-details table tbody .td-flex .td-span-parent {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.month-show .detail-container .table-details table tbody .left {
+  text-align: left;
+}
+.month-show .detail-container .table-details table tbody .right {
+  text-align: right;
+}
+.month-show .detail-container .table-details table tfoot th {
+  vertical-align: middle;
+  text-align: right;
+}
+.month-show .detail-container .all-table {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.month-show .detail-container .all-table .total-month {
+  font-style: italic;
+}
+.month-show .detail-container .all-table .total-month label {
+  font-style: normal;
+  font-weight: bold;
+}
+.month-show .month-delete-div {
+  position: fixed;
+  top: 0rem;
+  left: 0rem;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.month-show .month-delete-div form {
+  min-width: 500px;
+  max-width: 95%;
+  background: black;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem gray;
+}
+.month-show .month-delete-div form .month-delete-error {
+  color: red;
+  display: block;
+}
+.month-show .month-delete-div form .btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+.month-show .hide {
+  display: none;
+}/*# sourceMappingURL=show.css.map */
