--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -77,6 +77,7 @@ body{
         justify-content: space-between;
         align-items: flex-start;
         gap: .5rem;
+        padding: 1rem 0rem;
 
         .content-loader{
             background: violet;
