--- a/public/css/notice/edit.css
+++ b/public/css/notice/edit.css
@@ -1,1 +1,36 @@
-/*# sourceMappingURL=edit.css.map */
+.notice-edit {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.notice-edit h2 {
+  text-align: center;
+}
+.notice-edit form {
+  max-width: 75%;
+  min-width: 95%;
+  background: black;
+  color: white;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem gray;
+}
+.notice-edit form .heading {
+  height: 5rem;
+}
+.notice-edit form .body {
+  height: 10rem;
+}
+.notice-edit form .notice-edit-error {
+  color: red;
+  display: block;
+}
+.notice-edit form .btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.5rem;
+}/*# sourceMappingURL=edit.css.map */
