--- a/public/css/notice/show.scss
+++ b/public/css/notice/show.scss
@@ -1,1 +1,103 @@
 
+.notice-show{
+    h2,h3{
+        margin: 0rem;
+        padding: 0rem;
+        text-align: center;
+    }
+
+    .top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: .5rem;
+
+        h2{
+            margin-left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    .details-container{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+
+        .info-container{
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            align-items: center;
+            padding: 1rem;
+            background: black;
+            color: white;
+
+            h3{
+                text-align: center;
+                color: goldenrod;
+            }
+
+            .body{
+                max-width: 100%;
+            }
+
+            .footer{
+                width: 100%;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                align-items: flex-end;
+
+                .admin{
+                    font-size: larger;
+                    font-weight: bolder;
+                    font-style: italic;
+                    color: red;
+                }
+
+                .date{
+                    color: red;
+                }
+            }
+        }
+    }
+
+    .notice-delete-div{
+        position: fixed;
+        top: 0rem;
+        left: 0rem;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,.75);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        form{
+            min-width: 500px;
+            max-width: 95%;
+            background: black;
+            padding: 1rem;
+            border-radius: .25rem;
+            box-shadow: 0rem 0rem .5rem gray;
+
+            .notice-delete-error{
+                color: red;
+                display: block;
+            }
+
+            .btn-container{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: .5rem;
+            }
+        }
+    }
+
+    .hide{
+        display: none;
+    }
+}
+
