--- a/public/css/default/index.css
+++ b/public/css/default/index.css
@@ -1,28 +1,42 @@
 body {
-  background: red;
   padding: 1rem;
+  background: black;
+  color: white;
+}
+body .form-label {
+  font-weight: bold;
+}
+body h1, body h2, body h3, body legend {
+  color: goldenrod;
+}
+body th {
+  color: #f48203;
 }
 body header {
-  background: green;
   width: 100%;
 }
 body header nav {
-  background: green;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0rem;
   left: 0rem;
+  padding: 0rem 1rem;
   width: 100%;
+  background: rgba(0, 0, 0, 0.75);
 }
 body header nav .logo {
+  color: goldenrod;
   text-decoration: none;
-  color: inherit;
-  padding: 0rem 1rem;
   display: block;
   font-weight: bold;
   font-size: 1.6875rem;
+  animation: logo 3s linear 1s infinite alternate-reverse forwards;
+}
+body header nav .logo:hover {
+  -webkit-animation: none;
+          animation: none;
 }
 body header nav ul {
   display: flex;
@@ -33,24 +47,53 @@ body header nav ul {
 }
 body header nav ul li {
   list-style: none;
+  transition: all 0.2s 0.1s;
 }
 body header nav ul li a {
   padding: 0.5rem 1rem;
   text-decoration: none;
   color: inherit;
   display: block;
+  font-style: italic;
 }
 body header nav ul li:hover {
-  color: black;
-  background: gray;
+  scale: 1.1;
+  color: blue;
+}
+body header nav .right-trigger {
+  padding: 0.5rem 0rem;
+  font-style: italic;
+  cursor: pointer;
+}
+body header nav .right-trigger:hover {
+  color: blue;
+}
+body header nav .right-ul {
+  position: absolute;
+  top: 40.5px;
+  right: 0rem;
+  display: flex;
+  flex-flow: column;
+  background: black;
+  color: white;
+  transition: all 0.5s ease-in-out;
+}
+body header nav .right-ul li {
+  width: 100%;
+  text-align: right;
+}
+body header nav .hide {
+  transform: translatex(500px);
 }
 body main {
-  background: blue;
+  background-image: url("/images/main_pic.jpg");
+  background-size: cover;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  padding: 40.5px 1rem 1rem 1rem;
+  margin-top: 40.5px;
+  height: 50vh;
 }
 body main h1 {
   padding: 0rem;
@@ -61,21 +104,18 @@ body main h6 {
   margin: 0rem;
 }
 body .content-body {
-  background: yellow;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   gap: 0.5rem;
-  padding: 1rem 0rem;
+  padding: 1.5625rem 0rem;
 }
 body .content-body .content-loader {
-  background: violet;
   min-height: 75vh;
   flex-grow: 2;
 }
 body .content-body aside {
   flex-grow: 1;
-  background: indigo;
 }
 body .content-body aside h2 {
   text-align: center;
@@ -84,7 +124,7 @@ body .content-body aside tr {
   cursor: pointer;
 }
 body footer {
-  background: orange;
+  padding-top: 1rem;
 }
 body footer h2 {
   text-align: center;
@@ -100,7 +140,7 @@ body footer .footer-contents .sides {
   justify-content: flex-start;
   align-items: flex-start;
   width: 50%;
-  border-left: 0.1rem solid blue;
+  border-left: 0.1rem solid white;
   padding: 1rem 0.5rem;
 }
 body footer .footer-contents .sides .form-label {
@@ -112,6 +152,7 @@ body footer .footer-contents .left {
 }
 body footer .footer-contents .left .form-label {
   font-weight: bold;
+  color: goldenrod;
 }
 body .home-notice-view {
   position: fixed;
@@ -189,6 +230,54 @@ body .login-div form .btn-container {
   justify-content: space-between;
   align-items: center;
 }
+body .change-password-div {
+  position: fixed;
+  top: 0rem;
+  left: 0rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.75);
+}
+body .change-password-div form {
+  max-width: 95%;
+  min-width: 500px;
+  background: black;
+  color: white;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem gray;
+}
+body .change-password-div form .change-password-error {
+  display: block;
+  color: red;
+}
+body .change-password-div form .btn-container {
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 body .hide {
   display: none;
+}
+
+@-webkit-keyframes logo {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
+
+@keyframes logo {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
 }/*# sourceMappingURL=index.css.map */
