--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -1,28 +1,45 @@
 body{
-    background: red;
     padding: 1rem;
+    background: black;
+    color: white;
+
+    .form-label{
+        font-weight: bold;
+    }
+
+    h1,h2,h3,legend{
+        color: goldenrod;
+    }
+
+    th{
+        color: #f48203;
+    }
 
     header{
-        background: green;
         width: 100%;
 
         nav{
-            background: green;
             display: flex;
             justify-content: space-between;
             align-items: center;
             position: fixed;
             top: 0rem;
             left: 0rem;
+            padding: 0rem 1rem;
             width: 100%;
+            background: rgba(0,0,0,.75);
 
             .logo{
+                color: goldenrod;
                 text-decoration: none;
-                color: inherit;
-                padding: 0rem 1rem;
                 display: block;
                 font-weight: bold;
                 font-size: 1.6875rem;
+                animation: logo 3s linear 1s infinite alternate-reverse forwards;
+
+                &:hover{
+                    animation: none;
+                }
             }
 
             ul{
@@ -34,30 +51,65 @@ body{
 
                 li{
                     list-style: none;
+                    transition: all .2s .1s;
 
                     a{
                         padding: .5rem 1rem;
                         text-decoration: none;
                         color: inherit;
                         display: block;
+                        font-style: italic;
                     }
 
                     &:hover{
-                        color: black;
-                        background: gray;
+                        scale: 1.1;
+                        color: blue;
                     }
                 }
+            }
+
+            .right-trigger{
+                padding: .5rem 0rem;
+                font-style: italic;
+                cursor: pointer;
+
+                &:hover{
+                    color: blue;
+                }
+            }
+
+            .right-ul{
+                position: absolute;
+                top: 40.5px;
+                right: 0rem;
+                display: flex;
+                flex-flow: column;
+                background: black;
+                color: white;
+                transition: all .5s ease-in-out;
+
+                li{
+                    width: 100%;
+                    text-align: right;
+                }
+            }
+
+            .hide{
+                transform: translatex(500px);
             }
         }
     }
 
     main{
-        background: blue;
+        background-image: url('/images/main_pic.jpg');
+        background-size: cover;
         display: flex;
         flex-flow: column;
         justify-content: center;
         align-items: center;
-        padding: 40.5px 1rem 1rem 1rem;
+        // padding: 40.5px 1rem 1rem 1rem;
+        margin-top: 40.5px;
+        height: 50vh;
 
         h1{
             padding: 0rem;
@@ -72,22 +124,19 @@ body{
     }
 
     .content-body{
-        background: yellow;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
         gap: .5rem;
-        padding: 1rem 0rem;
+        padding: 1.5625rem 0rem;
 
         .content-loader{
-            background: violet;
             min-height: 75vh;
             flex-grow: 2;
         }
 
         aside{
             flex-grow: 1;
-            background: indigo;
 
             h2{
                 text-align: center;
@@ -100,7 +149,7 @@ body{
     }
 
     footer{
-        background: orange;
+        padding-top: 1rem;
 
         h2{
             text-align: center;
@@ -117,7 +166,7 @@ body{
                 justify-content: flex-start;
                 align-items: flex-start;
                 width: 50%;
-                border-left: .1rem solid blue;
+                border-left: .1rem solid white;
                 padding: 1rem .5rem;
 
                 .form-label{
@@ -131,6 +180,7 @@ body{
 
                 .form-label{
                     font-weight: bold;
+                    color: goldenrod;
                 }
             }
         }
@@ -223,7 +273,51 @@ body{
         }
     }
 
+    .change-password-div{
+        position: fixed;
+        top: 0rem;
+        left: 0rem;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(0,0,0,.75);
+
+        form{
+            max-width: 95%;
+            min-width: 500px;
+            background: black;
+            color: white;
+            padding: 1rem;
+            border-radius: .25rem;
+            box-shadow: 0rem 0rem .5rem gray;
+
+            .change-password-error{
+                display: block;
+                color: red;
+            }
+
+            .btn-container{
+                margin-top: .5rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+    }
+
     .hide{
         display: none;
+    }
+}
+
+@keyframes logo {
+    from{
+        transform: rotateY(0deg) ;
+    }
+
+    to{
+        transform: rotateY(360deg);
     }
 }
