--- a/public/css/month/index.css
+++ b/public/css/month/index.css
@@ -17,6 +17,8 @@
   justify-content: space-between;
   align-items: flex-end;
   gap: 1rem;
+  background: gray;
+  padding: 0.5rem;
 }
 .month-index .top .form-group {
   width: 100%;
