--- a/public/css/month/index.scss
+++ b/public/css/month/index.scss
@@ -18,6 +18,8 @@
         justify-content: space-between;
         align-items: flex-end;
         gap: 1rem;
+        background: gray;
+        padding: .5rem;
 
         .form-group{
             width: 100%;
