--- a/public/css/notice/index.css
+++ b/public/css/notice/index.css
@@ -17,6 +17,8 @@
   justify-content: space-between;
   align-items: flex-end;
   gap: 1rem;
+  background: gray;
+  padding: 0.5rem;
 }
 .notice-index .top .search {
   flex-grow: 10;
