--- a/public/css/default/index.css
+++ b/public/css/default/index.css
@@ -6,7 +6,7 @@ body {
 body .form-label {
   font-weight: bold;
 }
-body h1, body h2, body h3, body legend {
+body h1, body h2, body h3, body h4, body legend {
   color: goldenrod;
 }
 body th {
@@ -25,6 +25,7 @@ body header nav {
   padding: 0rem 1rem;
   width: 100%;
   background: rgba(0, 0, 0, 0.75);
+  z-index: 1000;
 }
 body header nav .logo {
   color: goldenrod;
