--- a/public/css/default/dashboard.scss
+++ b/public/css/default/dashboard.scss
@@ -46,8 +46,61 @@
     }
 
     .bottom{
-        // border: .1rem solid blue;
-        // padding: .5rem;
         width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 1rem;
+
+        .sides{
+            width: 100%;
+            display: flex;
+            flex-flow: column;
+            justify-content: flex-start;
+            align-items: center;
+
+            label{
+                color: goldenrod;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                border-bottom: .1rem dashed gray;
+                font-weight: bold;
+                margin-bottom: 1rem;
+
+                span{
+                    color: white;
+                    font-weight: normal;
+                    font-style: italic;
+                }
+            }
+
+            form{
+                width: 100%;
+
+                label{
+                    color: white;
+                    width: auto;
+                    border: none;
+                    font-weight: normal;
+                    margin: 0rem;
+                    display: inline;
+                }
+
+                .home-rent-error{
+                    color: red;
+                    // display: block;
+                }
+
+                .btn-container{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 100%;
+                    margin-top: .5rem;
+                }
+            }
+        }
     }
 }
