--- a/public/css/default/index.scss
+++ b/public/css/default/index.scss
@@ -7,7 +7,7 @@ body{
         font-weight: bold;
     }
 
-    h1,h2,h3,legend{
+    h1,h2,h3,h4,legend{
         color: goldenrod;
     }
 
@@ -28,6 +28,7 @@ body{
             padding: 0rem 1rem;
             width: 100%;
             background: rgba(0,0,0,.75);
+            z-index: 1000;
 
             .logo{
                 color: goldenrod;
